--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="Javascript/lektion_1.js" defer></script>
     <title>Javascript Øvelser</title>
   </head>
-  <body></body>
+  <body>
+    <button id="clickButton">Click me!</button>
+    <p>You have clicked the button <span id="clickCount">0</span> times.</p>
+    
+    <form id="inputForm">
+      <label for="userInput">Enter new password (only allowed 8 letter password):</label>
+      <input type="text" id="userInput" maxlength="12">
+      <span id="error" class="error"></span>
+      <button type="submit">Submit</button>
+  </form>
+   
+  </body>
 </html>
