--- a/index.html
+++ b/index.html
@@ -3,19 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css">
     <script src="Javascript/lektion_1.js" defer></script>
     <title>Javascript Øvelser</title>
   </head>
   <body>
+    <!-- OPGAVE 3 -->
     <button id="clickButton">Click me!</button>
     <p>You have clicked the button <span id="clickCount">0</span> times.</p>
     
+    <!-- OPGAVE 4 -->
     <form id="inputForm">
       <label for="userInput">Enter new password (only allowed 8 letter password):</label>
       <input type="text" id="userInput" maxlength="12">
       <span id="error" class="error"></span>
       <button type="submit">Submit</button>
   </form>
-   
+   <!-- OPGAVE 5 -->
+    <div class="square">
+     <div>
+      1
+     </div>
+     <div>
+      2
+     </div>
+     <div>
+      3
+     </div>
+     <div>
+      4
+     </div>
+    </div>
   </body>
 </html>
