--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Javascript Øvelser</title>
+    <link rel ="stylesheet" href ="style.css">
+    <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+  <div id="container">
+    <h1>Click counter</h1>
+   <button id="myBtn">Click me!</button>
+   <p id="clicked">You has clicked:0</p>
+    
+   <h2>Validation input</h2>
+   <input type="text" id="inputElem" placeholder="Enter your text here">
+   <button id="button">Add</button><br><br>
+
+   <h2>Validation input with conditions</h2>
+   <input type="text"  id="inputField" placeholder="Enter your text here">
+   <button id="button2">Submit</button>
+   <p id="message2"></p>
+  </div>
+
+  <h2>Generate colors</h2>
+   <div class="sheet">
+       <div  class="box" id="box1"></div>
+       <div  class="box" id="box2"></div>
+       <div  class="box" id="box3"></div>
+       <div  class="box" id="box4"></div>
+  </div>
+  
+
+  </body>
 </html>
