--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css">
     <script src="Javascript/lektion_1.js" defer></script>
+    <script src="Javascript/lektion_2.js" defer></script>
     <title>Javascript Øvelser</title>
   </head>
   <body>
@@ -34,5 +35,9 @@
       4
      </div>
     </div>
+    <footer>
+      <p>The length property returns the length of a string Find the length of "Relativitetsteori.</p>
+      <p id="countWord"></p>
+    </footer>
   </body>
 </html>
