--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Javascript Øvelser</title>
+    <title>Javascript Øvelser2</title>
+    <script src="/Javascript/script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+
+    </div>
+  </body>
 </html>
