--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <script src="Javascript/lektion_1.js" defer></script>
     <script src="Javascript/lektion_2.js" defer></script>
+    <script src="Javascript/lektion_3.js" type="module"></script>
     <title>Javascript Øvelser</title>
   </head>
   <body>
@@ -35,6 +36,7 @@
       4
      </div>
     </div>
+    <div id="productsMain"></div>
     <footer>
       <p>The length property returns the length of a string Find the length of "Relativitetsteori.</p>
       <p id="countWord"></p>
