--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Javascript Øvelser2</title>
-    <script src="/Javascript/script.js" defer></script>
+    <!-- <script src="/Javascript/script.js" defer></script> -->
+    <script type ="module" src="Javascript/storeProducts.js" defer></script>
+    <link rel="stylesheet" href="Javascript/style.css">
   </head>
   <body>
     <div id="container">
+    </div>
+    <div id="myDiv">
 
     </div>
   </body>
